# sqlalchemy_manager

./: .gitignore  Readme.md  Taskfile.yml  pyproject.toml  pytest.ini
.github/workflows/: lint.yml  test.yml
core/: manager.py
sqlalchemy_manager/: __init__.py  exceptions.py  manager.py
tests/: config.py  models.py  tests.py
