[tool.poetry]
name = "sqlalchemy-manager"
version = "0.1.0"
description = ""
authors = ["Darius1223 <dar.290199@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.28"


[tool.poetry.group.lint.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
